--- a/AppShell.xaml
+++ b/AppShell.xaml
@@ -4,11 +4,17 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:ExpenseManager"
-    Shell.FlyoutBehavior="Disabled">
+    Shell.FlyoutBehavior="Flyout">
 
     <ShellContent
-        Title="Home"
+        Title="Inicio"
         ContentTemplate="{DataTemplate local:MainPage}"
-        Route="MainPage" />
+        Route="MainPage"/>
+
+    <ShellContent Title="Nuevo Gasto"
+                  ContentTemplate="{DataTemplate local:Views.AddExpensePage}"/>
+
+    <ShellContent Title="Gastos Sugeridos"
+                  ContentTemplate="{DataTemplate local:Views.SuggestedExpensePage}"/>
 
 </Shell>
