--- a/Views/LogInPage.xaml
+++ b/Views/LogInPage.xaml
@@ -1,12 +1,32 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:viewmodels="clr-namespace:ExpenseManager.ViewModels"
+             x:DataType="viewmodels:LogInViewModel"
              x:Class="ExpenseManager.Views.LogInPage"
-             Title="LogInPage">
+             Title="Inicio de Sesión">
     <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+        <StackLayout>
+            <Image Source="logo.png" HeightRequest="120" HorizontalOptions="Center" VerticalOptions="Center" Margin="0, 90, 0, 0"/>
+            <HorizontalStackLayout>
+                <Frame Padding="10" Margin="17, 90, 0, 0">
+                    <HorizontalStackLayout>
+                        <Image Source="user.png" HeightRequest="50" Margin="10, 0"/>
+                        <Entry Placeholder="Usuario" WidthRequest="270" PlaceholderColor="LightGray" Text="{Binding User.Email}" />
+                    </HorizontalStackLayout>
+                </Frame>
+            </HorizontalStackLayout>
+            <HorizontalStackLayout>
+                <Frame Padding="10" Margin="17, 50, 0, 0">
+                    <HorizontalStackLayout>
+                        <Image Source="password.png" HeightRequest="50" Margin="10, 0"/>
+                        <Entry Placeholder="Contraseña" WidthRequest="270" IsPassword="True" PlaceholderColor="LightGray" Text="{Binding User.Password}"/>
+                    </HorizontalStackLayout>
+                </Frame>
+            </HorizontalStackLayout>
+
+            <Button Text="Iniciar Sesión" WidthRequest="250" Margin="0, 90" Padding="0, 20"/>
+        </StackLayout>
     </VerticalStackLayout>
+
 </ContentPage>
