--- a/Views/MainPage.xaml
+++ b/Views/MainPage.xaml
@@ -3,10 +3,19 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:viewmodels="clr-namespace:ExpenseManager.ViewModels"
              xmlns:views="clr-namespace:ExpenseManager.Views"
+             xmlns:model="clr-namespace:ExpenseManager.Models"
              x:DataType="viewmodels:MainViewModel"
              x:Class="ExpenseManager.MainPage">
     <Shell.BackButtonBehavior>
         <BackButtonBehavior  IsEnabled="False" IsVisible="False"/>
     </Shell.BackButtonBehavior>
+    <ContentPage.ToolbarItems>
+        <ToolbarItem Text="Edit" />
+    </ContentPage.ToolbarItems>
 
+    <VerticalStackLayout>
+        <StackLayout>
+            <Label Text="Necesidades del mes" HorizontalOptions="Center" Margin="0,100"/>
+        </StackLayout>
+    </VerticalStackLayout>
 </ContentPage>
